Fixing image not showing bug on main index.html

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 html {
   height: 100%;
-
-  background: url(../assets/images/main-background-original.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
-
+body {
+    background: url(../assets/images/main-background-original.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 * {
   /* border: solid red 2px; */
   /* color: #E8D4C5; */
